// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<LinkButton /> > renders as expected based on provided props 1`] = `
<div>
  <button
    class="tw:inline-flex tw:rounded-md tw:focus-ring tw:text-brand tw:highlight:text-brand-dark tw:highlight:underline tw:px-3 tw:py-1.5"
  />
</div>
`;

exports[`<LinkButton /> > renders as expected based on provided props 2`] = `
<div>
  <button
    class="tw:inline-flex tw:rounded-md tw:focus-ring tw:text-brand tw:highlight:text-brand-dark tw:highlight:underline tw:px-3 tw:py-1.5 tw:pointer-events-none tw:opacity-65"
    disabled=""
  />
</div>
`;

exports[`<LinkButton /> > renders as expected based on provided props 3`] = `
<div>
  <button
    class="tw:inline-flex tw:rounded-md tw:focus-ring tw:text-brand tw:highlight:text-brand-dark tw:highlight:underline tw:px-1.5 tw:py-1 tw:text-sm"
  />
</div>
`;

exports[`<LinkButton /> > renders as expected based on provided props 4`] = `
<div>
  <button
    class="tw:inline-flex tw:rounded-md tw:focus-ring tw:text-brand tw:highlight:text-brand-dark tw:highlight:underline tw:px-3 tw:py-1.5"
  />
</div>
`;

exports[`<LinkButton /> > renders as expected based on provided props 5`] = `
<div>
  <button
    class="tw:inline-flex tw:rounded-md tw:focus-ring tw:text-brand tw:highlight:text-brand-dark tw:highlight:underline tw:px-4 tw:py-2 tw:text-lg"
  />
</div>
`;
